<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.ocnyang.eurooostock.module.store.StoreActivity">
    <item
        android:id="@+id/action_do_byxml"
        android:orderInCategory="100"
        android:title="@string/action_byxml"/>
    <item
        android:id="@+id/action_bycode"
        android:orderInCategory="100"
        android:title="@string/action_bycode"/>
    <item
        android:id="@+id/action_bycustom"
        android:orderInCategory="100"
        android:title="@string/action_bycustom"/>
    <item
        android:id="@+id/action_byviewpropertyanimator"
        android:orderInCategory="100"
        android:title="@string/action_byviewpropertyanimator"/>
    <item
        android:id="@+id/action_bylayoutanimator"
        android:orderInCategory="100"
        android:title="@string/action_bylayoutanimator"/>

</menu>
